# dbpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  dbpp-config.cmake.in  dbpp.pc.in
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: DevModes.cmake  ExecuteAndCaptureStdout.cmake  FindSQLite3.cmake
dbpp/: CMakeLists.txt  config.h.in  dbpp-config.cmake.in
dbpp-sqlite3/: CMakeLists.txt  dbpp-sqlite3-config.cmake.in
dbpp-sqlite3/include/dbpp/sqlite3/: Sqlite3.h
dbpp-sqlite3/src/: Sqlite3.cpp
dbpp/include/dbpp/: Connection.h  Exception.h  MetaFunctions.h  PlaceholderBinder.h  PreparedStatement.h  Result.h  Statement.h  StatementBuilder.h  dbpp.h  util.h
dbpp/include/dbpp/adapter/: Connection.h  PreparedStatement.h  Result.h  Statement.h  Types.h
dbpp/src/: Connection.cpp  PreparedStatement.cpp  Result.cpp  StatementBuilder.cpp
docs/: CMakeLists.txt  mainpage.md
docs/examples/: ConnectionClass.cpp  ConnectionPrepare.cpp  ReadmeExample.cpp
docs/main/: Connection_8h_source.html  Exception_8h_source.html  MetaFunctions_8h_source.html  PlaceholderBinder_8h_source.html  PreparedStatement_8h_source.html  Result_8h_source.html  Sqlite3_8h_source.html  StatementBuilder_8h_source.html  Statement_8h_source.html  Types_8h_source.html  _2home_2runner_2work_2dbpp_2dbpp_2src_2include_2dbpp_2Connection_8h-example.html  adapter_2Connection_8h_source.html  adapter_2PreparedStatement_8h_source.html  adapter_2Result_8h_source.html  adapter_2Statement_8h_source.html  annotated.html  classDbpp_1_1Adapter_1_1Connection-members.html  classDbpp_1_1Adapter_1_1Connection.html  classDbpp_1_1Adapter_1_1PreparedStatement-members.html  classDbpp_1_1Adapter_1_1PreparedStatement.html  classDbpp_1_1Adapter_1_1PreparedStatement__coll__graph.map  classDbpp_1_1Adapter_1_1PreparedStatement__coll__graph.md5  classDbpp_1_1Adapter_1_1Result-members.html  classDbpp_1_1Adapter_1_1Result.html  classDbpp_1_1Adapter_1_1Statement-members.html  classDbpp_1_1Adapter_1_1Statement.html  classDbpp_1_1Adapter_1_1Statement__coll__graph.map  classDbpp_1_1Adapter_1_1Statement__coll__graph.md5  classDbpp_1_1Adapter_1_1Statement__inherit__graph.map  classDbpp_1_1Adapter_1_1Statement__inherit__graph.md5  classDbpp_1_1BindHelper-members.html  classDbpp_1_1BindHelper.html  classDbpp_1_1Connection-members.html  classDbpp_1_1Connection.html  classDbpp_1_1Driver_1_1Connection-members.html  classDbpp_1_1Driver_1_1Connection.html  classDbpp_1_1Driver_1_1Result-members.html  classDbpp_1_1Driver_1_1Result.html  classDbpp_1_1Driver_1_1Statement-members.html  classDbpp_1_1Driver_1_1Statement.html  (+127 more)
docs/main/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+12 more)
include/: CMakeLists.txt
include/dbpp/: Connection.h  Exception.h  MetaFunctions.h  PlaceholderBinder.h  PreparedStatement.h  Result.h  Sqlite3.h  Statement.h  StatementBuilder.h  config.h  dbpp.h  defs.h
include/dbpp/adapter/: Connection.h  PreparedStatement.h  Result.h  Statement.h  Types.h
include/dbpp/driver/: Connection.h  Result.h  Statement.h  Types.h
packaging/: CMakeLists.txt
src/: CMakeLists.txt  Connection.cpp  Connection.cxx  Result.cpp  Result.cxx  Statement.cpp  Statement.cxx
src/adapter/: Sqlite3.cpp
src/drivers/: Sqlite3.cpp
test/: CMakeLists.txt  Persons.cpp  Persons.h  TestConnection.cpp  TestResult.cpp  TestStatement.cpp  TestStatementBuilder.cpp  sqlite.cpp
